# Inspire-Robots-Hand-Teleoperation

./: README.md
docker/ROS1/: hand-docker-compose.yaml  hand.dockerfile
docker/ROS2/: hand-docker-compose.yaml  hand.dockerfile
ros1_ws/src/: CMakeLists.txt  inspire_hand使用方法.txt
ros1_ws/src/include/: hand_control.h
ros1_ws/src/launch/: hand_control.launch
ros1_ws/src/src/: hand_control_lib.cpp  handcontroltopicpublisher(old).cpp
ros2_ws/: Ubuntu22安装CH340驱动说明.txt  ros2_ws使用方法.txt
ros2_ws/inspire_hand/: CMakeLists.txt  package.xml
ros2_ws/inspire_hand/src/: Hand_control.cpp  Poor.cpp
ros2_ws/service_interfaces/: CMakeLists.txt  package.xml
ros2_ws/service_interfaces/srv/: Getangleact.srv  Getangleset.srv  Getcurrentact.srv  Geterror.srv  Getforceact.srv  Getforceset.srv  Getposact.srv  Getposset.srv  Getspeedset.srv  Gettemp.srv  Setangle.srv  Setforce.srv  Setpos.srv  Setspeed.srv  getangleact.hpp  getangleset.hpp  getcurrentact.hpp  geterror.hpp  getforceact.hpp  getforceset.hpp  getposact.hpp  getposset.hpp  getspeedset.hpp  gettemp.hpp  setangle.hpp  setforce.hpp  setpos.hpp  setspeed.hpp
